src/styles.module.css
/* ... */
.searchContainer {
  position: relative !important;
  width: 100% !important;
}

.searchContainer.new {
  width: 31% !important;
  margin-inline: auto !important;
  transition: width 0.3s ease-in-out !important;
}

@media screen and (max-width: 450px) {
  .searchOuterContainer {
    max-height: 450px !important;
    overflow-y: auto !important;
  }
  .searchWrapper {
    width: 88% !important;
  }
  .searchWrapper.new {
    width: 80% !important;
  }
}
@media screen and (max-width: 426px) {
  .searchContainer.new {
    width: 48% !important;
  }
}

.searchContainer.new:hover {
  width: 100% !important;
}

.searchContainer.new.hasInput {
  width: 100% !important;
}

.placeholderImage {
  height: 28px !important;
  width: 48px !important;
  object-fit: contain !important;
}

.aiSearchBarHeader {
  position: absolute !important;
  top: 0rem;
  transition-duration: 0.5s;
  left: 0px;
  height: 38px !important;
  width: 100%;
  overflow: hidden !important;
  background: white;
  border-radius: 25px;
  border: 2px solid var(--primaryColor) !important;
  outline: 6px solid var(--secondaryColor) !important;
  box-shadow: 0px 0px 15px 10px var(--shadowColor) !important;
  padding: 3px;
}

.aiSearchBarHeader.expanded {
  animation: expandWidth 1.2s ease forwards;
}
.aiSearchBarHeader.contract {
  animation: contractWidth 1.2s ease forwards;
}

@media screen and (max-width: 450px) {
  .aiSearchBarHeader.expanded {
    animation: expandWidthMobile 1.2s ease forwards;
  }
  .aiSearchBarHeader.contract {
    animation: contractWidthMobile 1.2s ease forwards;
  }
}

@media screen and (max-width: 400px) {
  .aiSearchBarHeader.expanded {
    animation: expandWidthMobileSmall 1.2s ease forwards;
  }
  .aiSearchBarHeader.contract {
    animation: contractWidthMobileSmall 1.2s ease forwards;
  }
}

.aiSearchBarHeader.slideTop {
  animation: slideUp 1s ease forwards;
}
.aiSearchBarHeader.slideDown {
  animation: slideDown 1s ease forwards;
}

.searchInputWrapper {
  display: flex !important;
  align-items: center !important;
  height: 100% !important;
  white-space: nowrap;
  gap: 5px !important;
}

.searchInputWrapper > *:first-child {
  flex-shrink: 0; /* Prevent shrinking of the first child */
}

.aiSearchBarHeader.expanded .searchInputWrapper {
  opacity: 1;
  width: 100% !important;
  transition-delay: 0s;
}

.imageIcon {
  color: #666 !important;
  font-size: 20px !important;
  cursor: pointer !important;
  padding-top: 2px !important;
}
.imageIconRounded {
  color: #666 !important;
  font-size: 20px !important;
  cursor: pointer !important;
  padding-left: 10px !important;
  padding-top: 4px !important;
}
.searchIcon {
  display: flex !important;
  color: #666 !important;
  font-size: 20px !important;
  cursor: pointer !important;
  padding-right: 10px !important;
  align-items: center !important;
}

.newSearchIcon {
  display: flex !important;
  justify-content: center !important;
  align-items: center !important;
  width: 33px !important;
  height: 33px !important;
  background: var(--primaryColor) !important;
  border-radius: 50% !important;
  outline: 2px solid var(--secondaryColor) !important;
}

.aiSearchBarInput {
  flex: 1 !important;
  border: none !important;
  outline: none !important;
  font-size: 15px !important;
  min-width: 0 !important;
  color: #000000 !important;
}

input[type='text'] {
  font-family: var(--inheritFontFamily) !important;
  font-weight: 400 !important;
  padding-left: 10px !important;
}

.inputContracted {
  width: 0 !important;
  opacity: 0 !important;
  transition: width 0.5s ease, opacity 0.5s ease !important;
}

.aiSearchBarInput::placeholder {
  color: #00000080 !important;
  /* background: linear-gradient(
    90deg,
    #2c9adf 0%,
    #6385d4 50%,
    #ce6882 100%
  ) !important; */
  /* -webkit-background-clip: text !important;
  -webkit-text-fill-color: transparent !important;
  background-clip: text !important; */
  transition: opacity 0.3s ease !important;
}
.aiSearchBarInput.placeholderHidden::placeholder {
  opacity: 0 !important;
}

.searchCross {
  height: 16px !important;
  width: 16px !important;
  display: flex !important;
  justify-content: center !important;
  align-items: center !important;
  background: var(--shadowColor) !important;
  border-radius: 50% !important;
  border: 2px solid var(--primaryColor) !important;
  color: var(--primaryColor) !important;
}

.aiSearchResultsContainer {
  background-color: #ffffffbf !important;
  backdrop-filter: blur(10px);
  border-radius: 12px;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
  margin-top: 16px;
  display: none;
  width: 103%;
  position: absolute;
  opacity: 0;
  bottom: 100%;
  z-index: -90;
  height: 250px;

  border-image-source: linear-gradient(
    90deg,
    #2c9adf 0%,
    #6385d4 50%,
    #ce6882 100%
  ) !important;
}
.aiSearchResultsContainer.visibile {
  animation: visibility 0.8s ease forwards;
}

.aiSearchResultsContainer::-webkit-scrollbar-button {
  display: none !important;
}

.aiSearchBarResponse {
  margin: 12px !important;
  height: 100% !important;
  position: relative !important;
}

.hideOverFlow {
  overflow-y: auto !important;
  height: 85% !important;
  scrollbar-width: thin !important;
  scrollbar-color: var(--primaryColor) #ffffff80 !important;
  padding: 8px !important;
}

.aiSearchResultsContainer::-webkit-scrollbar {
  background: #ffffff80 !important;
}

.aiSearchBarResponse p {
  font-size: 14px !important;
  line-height: 16.8px !important;
  padding-bottom: 16px !important;
}

.aiSearchBarLink {
  display: flex !important;
  align-items: center !important;
  gap: 6px !important;
}

.aiSearchBarLinkContent {
  flex: 1 !important;
}
/* ... */

